<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstAndroid</string>
    <string name="hello_world">Hello world! This is my first android app!</string>
    <string name="action_settings">Settings</string>
    <string name="name_text">Name:</string>
    <string name="addr_text">Address:</string>
    <string name="lang_text">Language:</string>
    <string name="autoComplete_hint">Single Word AutoComlete</string>
     <string name="multiAutoComplete_hint">Multiple Words AutoComlete</string>
    

</resources>
