<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
 
	<!-- ICON Photo -->
    <LinearLayout android:orientation="horizontal" 
	    			android:layout_width="fill_parent"
	    			android:layout_height="wrap_content">
		    <ImageButton android:id="@+id/iconButton"
		        	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:onClick="myClickHandler"
		        	android:src="@drawable/iconbuttonselector"
		        	/>
		
	</LinearLayout>
	<!-- NAME CONTAINER -->
	<LinearLayout  
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/name_text" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/nameValue" />
	</LinearLayout>
	<!-- ADDRESS CONTAINER -->
	<LinearLayout 
	    android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/addr_text" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:id="@+id/addrValue" />
	</LinearLayout>
	
	<!--Country Container -->
	<LinearLayout android:orientation="horizontal" 
	    			android:layout_width="match_parent"
	    			android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
		    	  android:layout_height="wrap_content"
		    	  android:text="@string/lang_text"
		    	 
		    />
		<AutoCompleteTextView android:layout_width="wrap_content"  android:hint="@string/autoComplete_hint"
	    	android:layout_height="wrap_content" android:id="@+id/langValue"/>
	</LinearLayout>
	
	<LinearLayout android:orientation="horizontal" 
	    			android:layout_width="match_parent"
	    			android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
		    	  android:layout_height="wrap_content"
		    	  android:text="@string/lang_text"		    	 
		    />
		<MultiAutoCompleteTextView android:id="@+id/mactv"  android:hint="@string/multiAutoComplete_hint"
                         android:layout_width="fill_parent" android:layout_height="wrap_content" />
		
	</LinearLayout>
	<!-- Food Preference -->

		
	<LinearLayout
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		
	    <TextView android:text="Planets Spinner" android:layout_width="wrap_content" android:layout_height="wrap_content" />
		
	 	<Spinner android:id="@+id/spinner"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
	</LinearLayout>
	
    	
<!-- 	<LinearLayout
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		
	    <TextView android:text="Home Map" android:layout_width="wrap_content" android:layout_height="wrap_content" />
	    <com.google.android.maps.MapView
	        	android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:enabled="true"
				android:clickable="true"
				android:apiKey="myAPIKey"/>
	</LinearLayout>
	 -->

	
</LinearLayout>